# creek

./: .env  .gitignore  Cargo.toml  README.md  build.rs  eval_github.sh  make.sh  rust-toolchain
docs/: EnclaveRegistry.md  Make-It-Better.md  Testcases.md  todo.md
docs/data_structure/: EnclaveRegistry.md  enclave-metadata
docs/templates/: vc_schema.json
docs/vc-examples/: a1.json  a10.json  a11.json  a2.json  a3.json  a4.json  a5.json  a6.json  a7.json  a8.json
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_target_1.rs
scripts/: g.sh  make.sh  parachain.sh  request-vc.sh  test_all.sh  test_all_identity_management.sh  test_all_vc_management.sh  test_lit_set_user_shielding_key.sh  test_lit_vc.sh
scripts/identity_management/: tc_00.sh
src/: ethereum_signature.rs  helper.rs  hex.rs  index.rs  lib.rs  lit_vc.rs  primitives.rs  rpc.rs  rpc_error.rs  utils.rs
src/api_client_patch/: batch_all.rs  event.rs  mod.rs  parachain.rs
src/client/: mod.rs  service.rs  worker_public_api_impl.rs  worker_tx_api_impl.rs
src/core/: getter.rs  mod.rs  network.rs  trusted_call.rs
src/direct_call/: mod.rs  primitives.rs  top.rs  trusted_call_signed.rs  types.rs
src/identity_management/: api.rs  events.rs  fuzz.rs  lit_link_identity.rs  lit_set_user_shielding_key.rs  mod.rs  xtbuilder.rs
src/primitives/: address.rs  aes.rs  aes_request.rs  assertion.rs  cerror.rs  crypto.rs  enclave.rs  error.rs  ethereum.rs  getter.rs  identity.rs  keypair.rs  mod.rs  network.rs  rsa_request.rs  stf_error.rs  top.rs  trusted_call.rs  types.rs  vc.rs
src/primitives/assertion/: bnb_domain.rs  error.rs  generic_discord_role.rs  mod.rs
src/primitives/signature/: mod.rs  validation_data.rs
src/ra/: attestation.rs  lib_sgx.c  mod.rs  sgx_types.rs
src/service/: config.rs  getter_trait.rs  json.rs  mod.rs  parachainclient.rs  workerclient.rs  wsclient.rs
src/service/impls/: getter.rs  mod.rs  parachain.rs  public_api.rs  stf.rs  stf_inner.rs  tx_api.rs  vdata.rs  worker.rs  worker_inner.rs
src/sidechain/: api.rs  di.rs  mod.rs  rpc.rs
src/utils/: address.rs  crypto.rs  di.rs  enclave.rs  hex.rs  identity.rs  mod.rs  parachain.rs  public_api.rs  util.rs  vc.rs  worker_public_api_utils.rs
src/vc_management/: api.rs  events.rs  fuzz.rs  getter.rs  lit_request_vc.rs  lit_vc_verification.rs  mod.rs  verification.rs  verify.rs  xtbuilder.rs
tests/: test_achainable_assertion.rs  test_alpha_launch.rs  test_ci_error.rs  test_corner_case.rs  test_decrypt.rs  test_demo.rs  test_di.rs  test_direct_call.rs  test_identity_management.rs  test_lit_set_user_shielding_key.rs  test_lit_vc.rs  test_metadata.rs  test_parachain.rs  test_ra_attestation.rs  test_sidechain.rs  test_utils.rs  test_vc_management.rs  test_vc_verification.rs  test_vc_verify.rs
