[package]
name = "litentry-test-suit"
version = "0.1.0"
edition = "2021"
authors = ["zTgx <beautifularea@gmail.com>"]
repository = "https://github.com/zTgx/litentry-test-suit.git"
readme = "README.md"
description = "Litentry parachain test suit.(unofficial)"

[dependencies]
substrate-api-client = { features = [
  "ws-client",
], git = "https://github.com/scs/substrate-api-client.git", branch = "polkadot-v0.9.37-tag-v0.7.0" }
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37" }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
  'derive',
] }
scale-info = { version = "2.3.0", default-features = false, features = [
  "derive",
] }
aes-gcm = { git = "https://github.com/RustCrypto/AEADs", default-features = false, features = [
  "getrandom",
  "aes",
  "alloc",
] }
rsa = { git = "https://github.com/litentry/RustCrypto-RSA", default-features = false, features = [
  "serde",
  "pem",
] }
rand = { version = "0.8" }
sha2 = { version = "0.10.2" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = { version = "0.4", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
jsonschema = { version = "0.16.0", default-features = false, features = [
  "draft202012",
] }
ws = { version = "0.9.1", features = ["ssl"] }
log = { version = "0.4.14", default-features = false }
url = "2.0.0"
openssl = "0.10.48"
thiserror = { version = "1.0" }
basex-rs = "0.1.1"

[dev-dependencies]
threadpool = "1.8.1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
