[package]
name = "vc-sdk"
version = "0.1.1"
edition = "2021"
authors = ["zTgx <beautifularea@gmail.com>"]
repository = "https://github.com/zTgx/vc-sdk.git"
readme = "README.md"
description = "Litentry parachain api client."

[dependencies]
substrate-api-client = { features = [
  "ws-client",
], git = "https://github.com/scs/substrate-api-client.git", branch = "polkadot-v0.9.39-tag-v0.7.0" }
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.39" }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
  'derive',
] }
scale-info = { version = "2.4.0", default-features = false, features = [
  "derive",
] }
aes-gcm = { git = "https://github.com/RustCrypto/AEADs", default-features = false, features = [
  "getrandom",
  "aes",
  "alloc",
] }
rsa = { git = "https://github.com/litentry/RustCrypto-RSA", default-features = false, features = [
  "serde",
  "pem",
] }
rand = { version = "0.8" }
sha2 = { version = "0.10.2" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = { version = "0.4", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
jsonschema = { version = "0.16.0", default-features = false, features = [
  "draft202012",
] }
ws = { version = "0.9.1", features = ["ssl"] }
log = { version = "0.4.14", default-features = false }
url = "2.0.0"
openssl = "0.10.48"
thiserror = { version = "1.0" }
basex-rs = "0.2.0"
base64 = { version = "0.13", default-features = false, features = ["alloc"] }
chrono = "0.4.24"
arrayvec = "0.7.2"
itertools = "0.10.5"
env_logger = "0.10.0"
strum = { version = "0.25.0", default-features = false }
strum_macros = { version = "0.25.0", default-features = false }

# [build-dependencies]
[target.'cfg(unix)'.build-dependencies]
cc = "1.0"

[features]
local = []
staging = []
prod2 = []
