[package]
name = "creek"
version = "0.1.1"
edition = "2021"
authors = ["zTgx <beautifularea@gmail.com>"]
repository = "https://github.com/zTgx/vc-sdk.git"
readme = "README.md"
description = "Litentry parachain VC SDK"

[dependencies]
substrate-api-client = { default-features = false, features = [
  "std",
  "sync-api",
  "tungstenite-client",
], git = "https://github.com/scs/substrate-api-client.git", branch = "polkadot-v0.9.42-tag-v0.14.0" }
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
  'derive',
] }
scale-info = { version = "2.10.0", default-features = false, features = [
  "derive",
] }
aes-gcm = { git = "https://github.com/RustCrypto/AEADs", default-features = false, features = [
  "getrandom",
  "aes",
  "alloc",
] }
rsa = { git = "https://github.com/litentry/RustCrypto-RSA", default-features = false, features = [
  "serde",
  "pem",
] }
rand = { version = "0.8" }
ring = { version = "0.16.20", default-features = false }
sha2 = { version = "0.10.2" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = { version = "0.4", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42", default-features = false }
jsonschema = { version = "0.16.0", default-features = false, features = [
  "draft202012",
] }
ws = { version = "0.9.1", features = ["ssl"] }
url = "2.0.0"
openssl = "0.10.48"
thiserror = { version = "1.0" }
basex-rs = "0.2.0"
base64 = { version = "0.13", default-features = false, features = ["alloc"] }
chrono = "0.4.24"
arrayvec = "0.7.4"
itertools = "0.10.5"
env_logger = "0.10.0"
strum = { version = "0.25.0", default-features = false }
strum_macros = { version = "0.25.0", default-features = false }
bitcoin = { version = "0.31.0" }
frame-metadata = { version = "15.1", default-features = false, features = [
  "v14",
  "v15-unstable",
  "serde_full",
  "decode",
] }
pallet-evm = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.42" }
hex-literal = "0.4"
libsecp256k1 = "0.7.0"
log = "0.4"

# [build-dependencies]
[target.'cfg(unix)'.build-dependencies]
cc = "1.0"

[[bin]]
name = "demo"
path = "bin/main.rs"

[features]
local = []
staging = []
prod2 = []
